<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="announcements_bottom_navigation_menu_title">Announcements</string>
    <string name="profile_bottom_navigation_menu_title">Profile</string>
    <string name="notifications_bottom_navigation_menu_title">Notifications</string>
    <string name="saved_files_bottom_navigation_menu_title">Documents</string>
    <string name="announcements_error_message">Something went wrong</string>

    <!-- Announcements -->
    <string name="announcements_search">Search announcements</string>
    <string name="announcements_has_attachments">Attachments</string>

    <!-- Notifications -->
    <string name="notifications_empty">No available notifications</string>
    <string name="notifications_not_found">No notifications found</string>
    <string name="notifications_search">Search notifications</string>

    <!-- Profile -->
    <!-- Personal details -->
    <string name="profile_personal_details_title">Personal details</string>
    <string name="profile_personal_lastname_title">Surname</string>
    <string name="profile_personal_givenName_title">Given name</string>
    <string name="profile_personal_website_title">Website</string>
    <string name="profile_personal_description_title">Description</string>
    <string name="profile_personal_telephoneNumber_title">Personal telephone number</string>
    <string name="profile_social_edit">Edit %1$s</string>
    <string name="profile_social_edit_submit">OK</string>
    <string name="profile_social_edit_cancel">Cancel</string>
    <string name="profile_toast_clipboard">Copied!</string>

    <!-- Academic details -->
    <string name="profile_academic_details_title">Academic details</string>
    <string name="profile_academic_username_title">Username</string>
    <string name="profile_academic_type_title">Type</string>
    <string name="profile_academic_am_title">AM</string>
    <string name="profile_academic_displayName_title">Display name</string>
    <string name="profile_academic_registeredYear_title">Registered year</string>
    <string name="profile_academic_currentSemester_title">Current semester</string>

    <!-- Social -->
    <string name="profile_socials_title">Socials</string>
    <string name="profile_socials_googleplus_title" translatable="false">Google+</string>
    <string name="profile_socials_facebook_title" translatable="false">Facebook</string>
    <string name="profile_socials_github_title" translatable="false">Github</string>
    <string name="profile_socials_twitter_title" translatable="false">Twitter</string>
    <string name="profile_socials_linkedin_title" translatable="false">LinkedIn</string>

    <!-- Documents -->
    <string name="documents_search">Search documents</string>
    <string name="documents_modified">Last Modified: %1$s</string>
    <string name="documents_empty">No downloaded documents</string>
    <string name="documents_not_found">No documents found</string>
    <string name="documents_choose_file">Open file with</string>
    <string name="documents_delete_dialog_title">%1$s</string>
    <string name="documents_delete_dialog_body">Are you sure you want to delete this file?</string>
    <string name="documents_delete_dialog_confirm">Confirm</string>
    <string name="documents_delete_dialog_cancel">Cancel</string>
    <string name="documents_rename_dialog_title">Rename</string>
    <string name="documents_option_announcement">Go to announcement</string>
    <string name="documents_option_rename">Rename</string>
    <string name="documents_option_delete">Delete</string>
    <string name="documents_option_share">Share</string>
    <string name="documents_option_info">Info</string>
    <string name="documents_share_file_send_to">Send to</string>
    <string name="documents_sort_title">Sort files by</string>
    <string name="documents_sort_date">Date</string>
    <string name="documents_sort_alphabetical">Alphabetical</string>

    <!-- Options -->
    <string name="option_sort_title">Sort by</string>
    <string name="option_sort_by_date_published">Date published</string>
    <string name="option_sort_by_category">Semester</string>
    <string name="option_sort_by_publisher">Publisher</string>

    <!-- Categories filter -->
    <string name="categories_filter_dialog_title">Follow boards</string>
    <string name="categories_filter_clear">Clear</string>
    <string name="categories_filter_submit">Submit</string>

    <!-- Category filter -->
    <string name="category_filter_dialog_title">Show announcements from category</string>
</resources>