<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/announcementsFragment"
        android:icon="@drawable/selector_home"
        android:title="@string/announcements_bottom_navigation_menu_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/selector_notifications"
        android:title="@string/notifications_bottom_navigation_menu_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/selector_favorites"
        android:title="@string/favorites_bottom_navigation_menu_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/documentsFragment"
        android:icon="@drawable/selector_storage"
        android:title="@string/saved_files_bottom_navigation_menu_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/selector_profile"
        android:title="@string/profile_bottom_navigation_menu_title"
        app:showAsAction="ifRoom" />
</menu>