<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/categoryFilterTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/googlesans_medium"
        android:padding="18dp"
        android:text="@string/categories_filter_dialog_title"
        android:textColor="@color/colorOnPrimaryVariant"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/categoryFilterResetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/separator"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/categoryFilterSubmitTextView"
        android:alpha="0"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:enabled="false"
        android:fontFamily="@font/googlesans_medium"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/categories_filter_clear"
        android:textColor="@color/colorAccentContrast" />

    <TextView
        android:id="@+id/categoryFilterSubmitTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_above="@id/separator"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:fontFamily="@font/googlesans_medium"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/categories_filter_submit"
        android:textColor="@color/colorAccentContrast" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/categoryFilterTitleTextView"
        android:background="@color/colorOnPrimaryVariant" />

    <ProgressBar
        android:id="@+id/categoryFilterProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_below="@id/separator"
        android:layout_centerHorizontal="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryFilterRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_margin="8dp"
        tools:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
        tools:listitem="@layout/item_category_filter" />
</RelativeLayout>